runFormatTest(import.meta, ["glimmer"], { singleQuote: false });
runFormatTest(import.meta, ["glimmer"], { singleQuote: true });
